public/iperf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf
  labels:
    app.kubernetes.io/name: iperf
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: iperf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: iperf
    spec:
      containers:
      - name: iperf
        image: docker.io/griffinhtdocker/iperf
        ports:
        - containerPort: 5201
          name: iperf
        command: 
        - iperf3
        - --server
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: iperf
spec:
  selector:
    app.kubernetes.io/name: iperf
  type: LoadBalancer
  ports:
  - port: 5201
    targetPort: iperf
  loadBalancerIP: 35.231.59.239
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iperf
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: iperf
  policyTypes:
    - Ingress
  ingress:
    - from: []
