public/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.2
          args:
            - start
          ports:
            - name: http
              containerPort: 8080
                # todo metrics
            - name: management
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          resources:
            requests:
              cpu: 2000m
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-management
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - port: 80
      targetPort: management
---
# todo only allow port 80
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: caddy
      ports:
        - port: http
