public/miniflux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  labels:
    app.kubernetes.io/name: miniflux
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: miniflux
    spec:
      containers:
      - name: miniflux
        image: docker.io/miniflux/miniflux:latest
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
spec:
  selector:
    app.kubernetes.io/name: miniflux
  ports:
    - port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: miniflux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: caddy
