public/redlib.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redlib
  labels:
    app.kubernetes.io/name: redlib
spec:
  containers:
  - name: redlib
    image: quay.io/redlib/redlib:latest
    ports:
      - containerPort: 8080
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: redlib
spec:
  selector:
    app.kubernetes.io/name: redlib
      #type: default clusterip
  ports:
    - port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redlib
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redlib
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: caddy
