public/searxng.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  labels:
    app.kubernetes.io/name: searxng
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
  template:
    metadata:
      labels:
        app.kubernetes.io/name: searxng
    spec:
      containers:
      - name: searxng
        image: docker.io/searxng/searxng
        ports:
          - containerPort: 8080
            name: http
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: searxng
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: caddy
