public/speedtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: speedtest
  labels:
    app.kubernetes.io/name: speedtest
spec:
  containers:
  - name: speedtest
    image: ghcr.io/librespeed/speedtest:latest
    ports:
      - containerPort: 80
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
spec:
  selector:
    app.kubernetes.io/name: speedtest
  ports:
    - port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: speedtest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: speedtest
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: caddy
